# libatafw

./: .gitignore  CMakeLists.txt  README.md
include/libatafw/: ata_fw_err.h  common.h  debug.h  libatafw.h  libatafw_err.h
src/ata_fw/: ata_fw.c  ata_fw.h
